<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:layout_marginBottom="10dp" >

    <LinearLayout
       	
       	android:id="@+id/pop_check_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginStart="15dp" 
        android:layout_marginEnd="15dp">

  		 <LinearLayout
  		     android:layout_width="match_parent"
  		     android:layout_height="wrap_content"
  		     android:layout_marginBottom="10dp"
  		     android:layout_marginTop="10dp"
  		     android:background="@drawable/corner"
  		     android:orientation="vertical" >

  		     <Button
  		         android:id="@+id/btn_normal"
  		         android:layout_width="fill_parent"
  		         android:layout_height="wrap_content"
  		         android:text="@string/NORMAL" 
  		         android:background="@drawable/option_top"
  		         style="@style/popTextNormal"/>

  		     <Button
  		         android:id="@+id/btn_hight_level_1"
  		         android:layout_width="fill_parent"
  		         android:layout_height="wrap_content"
  		         android:text="@string/HIGHT_LEVEL_1"
  		         android:background="@drawable/option_middle"
  		         style="@style/popTextMiddle"/>
  		     <Button
  		         android:id="@+id/btn_hight_level_2"
  		         android:layout_width="fill_parent"
  		         android:layout_height="wrap_content"
  		         android:text="@string/HIGHT_LEVEL_2"
  		         android:background="@drawable/option_middle"
  		         style="@style/popTextMiddle"/>

  		     <Button
  		         android:id="@+id/btn_low_level_1"
  		         android:layout_width="fill_parent"
  		         android:layout_height="wrap_content"
  		         android:text="@string/LOW_LEVEL_1" 
  		         android:background="@drawable/option_under"
  		         style="@style/popTextMiddle"/>
  		     
  		     <Button
  		         android:id="@+id/btn_low_level_2"
  		         android:layout_width="fill_parent"
  		         android:layout_height="wrap_content"
  		         android:text="@string/LOW_LEVEL_2" 
  		         android:background="@drawable/option_under"
  		         style="@style/popTextMiddle"/>

   		 </LinearLayout>

       	 <LinearLayout
       	     android:layout_width="match_parent"
       	     android:layout_height="57dp"
       	     android:background="@drawable/corner"
       	     android:gravity="center"
       	     android:orientation="vertical" 
       	     android:layout_marginBottom="10dp">

       	     <Button
       	         android:id="@+id/btn_cancel"
       	         android:layout_width="fill_parent"
       	         android:layout_height="wrap_content"
       	         android:background="@null"
       	         android:text="@string/CANCEL" 
       	         style="@style/popTextCancel"/>
       	 </LinearLayout>

    </LinearLayout>



</RelativeLayout>